examples/errors/extends_self.ik
type Sized class extends Sized:
    fn size(Self) Int

fn main():
    print("\n")
